Bug 158512 - FILEOPEN PPTX Placeholder on master slide with Use background fill opened incorrectly on slide
Summary: FILEOPEN PPTX Placeholder on master slide with Use background fill opened inc...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:25.8.0 target:25.2.0.0.beta2
Keywords: filter:pptx, implementationError
Depends on:
Blocks: PPTX-Shapes
  Show dependency treegraph
 
Reported: 2023-12-04 12:19 UTC by Gabor Kelemen (Collabora)
Modified: 2024-12-10 16:35 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Modified example file from PP 2016 (68.41 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-12-04 12:19 UTC, Gabor Kelemen (Collabora)
Details
The placeholder box in PP and Impress - the mismatching setting (121.54 KB, image/png)
2023-12-04 12:23 UTC, Gabor Kelemen (Collabora)
Details
The setting on the master slide in PP and Impress - good (131.54 KB, image/png)
2023-12-04 12:25 UTC, Gabor Kelemen (Collabora)
Details
first slide in linux latest version (172.96 KB, image/png)
2023-12-29 09:19 UTC, Raúl Osuna
Details
second slide in linux latest version (167.90 KB, image/png)
2023-12-29 09:20 UTC, Raúl Osuna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-12-04 12:19:56 UTC
Created attachment 191217 [details]
Modified example file from PP 2016

Attached example file contains on the master slide a placeholder textbox with "Slide background fill".
The first slide of the file uses this master, and incorrectly opens the placeholder with "Slide background fill" - but in PP, this property is not inherited from the master (unlike other fills like solid, gradient or pattern...) and should use None.

1. Open attached document
-> On the first slide the Title placeholder overlaps the top right house drawing, unlike in PP.

Version: 24.2.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 43967453e15e1d054972a7586cfef8f8e0866270
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Seems to have started with:

https://git.libreoffice.org/core/+/c4cf2e82e8d0aaef9b1daedc033d6edf647e5284

author	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	Mon Jun 13 08:53:22 2022 +0200
committer	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	Thu Jun 16 15:44:53 2022 +0200
tree 86baca7fce89d0527d8177a7c4bb9a0e804cfc64
parent 3d2e26d8b7a99d0a622741ef4327e8cbc93bbe02 [diff]

tdf#128150 Add OOXML import/export for "use background fill"

(in the Area dialog you can already see the Use background fill button is pressed instead of None)
Comment 1 Gabor Kelemen (Collabora) 2023-12-04 12:23:22 UTC
Created attachment 191218 [details]
The placeholder box in PP and Impress - the mismatching setting
Comment 2 Gabor Kelemen (Collabora) 2023-12-04 12:25:44 UTC
Created attachment 191219 [details]
The setting on the master slide in PP and Impress - good
Comment 3 Gabor Kelemen (Collabora) 2023-12-04 12:27:07 UTC
On the second slide the Use background fill is set on the slide and not the master - this is imported correctly and looks the same in both programs.
Comment 4 Raúl Osuna 2023-12-29 09:19:53 UTC
Created attachment 191622 [details]
first slide in linux latest version
Comment 5 Raúl Osuna 2023-12-29 09:20:21 UTC
Created attachment 191623 [details]
second slide in linux latest version
Comment 6 Raúl Osuna 2023-12-29 09:20:50 UTC
Attaching how it looks like in GNU/Linux (openSUSE Tumbleweed):

Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: 60(Build:1)
CPU threads: 16; OS: Linux 6.6; UI render: default; VCL: kf5 (cairo+xcb)
Locale: es-ES (es_ES.UTF-8); UI: es-ES
Calc: threaded
Comment 7 Commit Notification 2024-12-09 14:34:34 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6c9055aaac77323b9446050dafb8dc8d492a6bd6

tdf#158512: PPTX import: reset useBgFill flag when it is unused

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2024-12-10 12:58:17 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/e03025fd90612d5753bacb664d20505f64aa5f56

tdf#158512: PPTX import: reset useBgFill flag when it is unused

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.