tdf#158512: PPTX import: reset useBgFill flag when it is unused

Even if current fill is not "use background" we should reset useBgFill
explicitly, since this value could be set from master slide and was
nested in current shape.

It is somewhat confusing to have fillStyle as none and using slide
background at the same time. So better to clean it explicitly.

Change-Id: I0d817dc295785be7a6cb8f884d5023d316cd2ebf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/165994
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
(cherry picked from commit 6c9055aaac77323b9446050dafb8dc8d492a6bd6)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178153
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Tested-by: allotropia jenkins <jenkins@allotropia.de>